--- a/index.html
+++ b/index.html
@@ -76,15 +76,13 @@
         <div class="container" id="main">
           <div class="row justify-content-center align-items-center mt-4">
             <div class="col-lg-6 col-lg-offset-4">
-              <form id="input-form">
+              <form>
                 <div class="form-group row mb-3">
                   <label for="input-id" class="col-sm-3 col-form-label">Pet ID</label>
                   <div class="col-sm-9">
                     <input type="text" class="form-control" id="input-id" placeholder="Input ID" />
-                    <span class="error-message"></span>
                   </div>
                 </div>
-
                 <div class="form-group row mb-3">
                   <label for="input-name" class="col-sm-3 col-form-label">Pet Name</label>
                   <div class="col-sm-5">
@@ -94,7 +92,6 @@
                       id="input-name"
                       placeholder="Input Name"
                     />
-                    <span class="error-message"></span>
                   </div>
                   <label for="input-age" class="col-sm-1 col-form-label" style="text-align: right"
                     >Age</label
@@ -106,22 +103,18 @@
                       id="input-age"
                       placeholder="Input Age"
                     />
-                    <span class="error-message"></span>
                   </div>
                 </div>
-
                 <div class="form-group row mb-3">
                   <label for="input-type" class="col-sm-3 col-form-label">Type</label>
                   <div class="col-sm-9">
                     <select class="form-control" id="input-type">
-                      <option></option>
+                      <option>Select Type</option>
                       <option>Dog</option>
                       <option>Cat</option>
                     </select>
-                    <span class="error-message"></span>
                   </div>
                 </div>
-
                 <div class="form-group row mb-3">
                   <label for="input-weight" class="col-sm-3 col-form-label">Weight</label>
                   <div class="col-sm-3">
@@ -131,7 +124,6 @@
                       id="input-weight"
                       placeholder="Input Weight"
                     />
-                    <span class="error-message"></span>
                   </div>
 
                   <label
@@ -147,21 +139,19 @@
                       id="input-length"
                       placeholder="Input Length"
                     />
-                    <span class="error-message"></span>
                   </div>
                 </div>
-
                 <div class="form-group row mb-3">
                   <label class="col-sm-3 col-form-label">Color</label>
                   <div class="col-sm-3">
-                    <input type="color" class="form-control" id="input-color" />
+                    <input type="color" class="form-control" id="input-color-1" />
                   </div>
                   <label for="input-breed" class="col-sm-3 col-form-label" style="text-align: right"
                     >Breed</label
                   >
                   <div class="col-sm-3">
                     <select class="form-control" id="input-breed">
-                      <option></option>
+                      <option>Select Breed</option>
                       <option>Tabby</option>
                       <option>Domestic Medium Hair</option>
                       <option>Mixed Breed</option>
@@ -171,10 +161,8 @@
                       <option>Persian</option>
                       <option>Rottweiler</option>
                     </select>
-                    <span class="error-message"></span>
                   </div>
                 </div>
-
                 <div class="form-group row mb-3">
                   <div class="col-sm-3"></div>
                   <div class="custom-control custom-checkbox col-sm-3">
@@ -190,7 +178,6 @@
                     <label class="custom-control-label" for="input-sterilized">Sterilized</label>
                   </div>
                 </div>
-
                 <button type="button" class="btn btn-primary" id="submit-btn">Submit</button>
                 <button type="button" class="btn btn-warning" id="healthy-btn">
                   Show Healthy Pet
@@ -231,7 +218,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      //   Toggle class active when click on navbar
+      // Toggle class active when click on navbar
       const sidebarTitleEl = document.getElementById('sidebar-title');
       const sidebarEl = document.getElementById('sidebar');
       sidebarTitleEl.addEventListener('click', function () {
